Fix (try) grey shade when long-tap on Safari

--- a/js/ui/mainUi.less
+++ b/js/ui/mainUi.less
@@ -5,7 +5,8 @@
 
     .wgo-board {
       margin: 0 auto;
-      /* Below avoid issues when tap-hold on mobile */
+      -webkit-tap-highlight-color: rgba(0,0,0,0); /* disables grey shade on long-tap for Safari */
+      /* Below avoid issues when tap-hold on Android */
       -webkit-user-select: none;
       -webkit-touch-callout: none;
     }
